# cs4248_project

./: .gitignore  ALBERT_training_test.ipynb  LICENSE  MobileBERT_training_test.ipynb  README.md  REMBERT_training_test.ipynb  conceptnet_api_scraper.py  conceptnet_api_test.ipynb  conceptnet_debias_test.ipynb  conceptnet_vectorizer_test.ipynb  cs4248_579294.slurmlog  environment.yml  filter_ablation.py  hypothesis4_plot.ipynb  model_training_test.ipynb  propagate.ipynb  pyproject.toml  rembert_finetune.py  requirements.txt  requirements.uv.txt  scraper_filter.py  scraper_filter_test.py  slurm.sh
BiasHeuristic/: bias_detection_test.ipynb
BinaryClassifier/: classifier.ipynb  classifier.py
bias_detection/: bias_detection_test.ipynb
data/: README.txt  data_cleaning.ipynb  gender_f.json  gender_m.json  gender_m_cleaned.csv  gender_n.json  gender_neutral.csv  gendered_word_list.csv  green_texts.csv  red_texts.csv  word_list.csv
data/conceptnet_api/csv/: edge_extract.csv  test_reduced.csv
data/gender_neutral/: gender_n_cleaned.csv  gender_neutral.csv  gender_neutral_medium.csv
data/gendered/: gender_f_cleaned.csv
data/ml_finetune/: finetuned_custom_embeddings.hdf  retrofitted-baseline-albert-128  retrofitted-baseline-mobilebert-128  retrofitted-custom-albert-128  retrofitted-custom-mobilebert-128
scraperVariations/: README.txt  conceptnet_api_scraper_var1.py  conceptnet_api_scraper_var2.py  conceptnet_api_scraper_var3.py
utils/: formats.py  languages.py  ppmi.py  relations.py  retrofit.py  sparse_matrix_builder.py  text2uri.py  transforms.py  uri.py
(+109 files in other folders)
