[project]
name = "cs4248-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "requests==2.32.3",
    "pillow==11.1.0",
    "tqdm==4.67.1",
    "ipykernel==6.29.5",
    "ftfy==6.3.1",
    "wordfreq==3.1.1",
]
